Filled in specifications

--- a/license.tex
+++ b/license.tex
@@ -2,4 +2,12 @@
 
 \section{Project}
 
+
+The project is released under the Peer Production License and Alain Sanguinetti is the sole owner of this project.
+
+The license may be found on the follwing website: 
+
+\url{http://p2pfoundation.net/Peer_Production_License}
+
 \section{Third-party}
+This project will use as much as possible free and open-source components in both hardware and software. 
